# label-pipeline

./: .gitignore  404.html  CONTRIBUTING.md  DATASET.md  NOTICE.md  README.md  REPORT.md  index.html  mkdocs.yml  objects.inv  requirements.txt  requirements_test.txt  setup.cfg  tox.ini
.github/workflows/: main.yml  tests.yml
contributing/: index.html
docs/: contributing.md  index.md
docs/reference/: airtable_logger.md  lambda_function.md  s3_utils.md
search/: search_index.json
src/: config.py
src/airtable_apply_annotations/: README.md  airtable_s3_integration.py  audio_dashboard_table.py  disfluency_table.py  homophones.py  lambda_function.py  mispronunciation.py  s3_utils.py
src/audio_classifier/: README.md  lambda_function.py  s3_utils.py
src/audio_recording_logger/: README.md  airtable.py  lambda_function.py  s3_utils.py
src/audio_splitter/: README.md  airtable_logger.py  lambda_function.py  s3_utils.py
src/step_function_invoker/: lambda_function.py
src/transcribe/: README.md  airtable_logger.py  aligner.py  classifier.py  homophones.py  lambda_function.py  mispronunciation.py  s3_utils.py  srt2txt.py  transcribe.py
src/webhook_listener/: lambda_function.py
tests/: conftest.py  test_aws.py  test_transcribe.py
tests/audio_classifier/: send_post.py  test-event-1.json
tests/audio_splitter/: test-event-1.json  test-event-2.json
tests/step_function_invoker/: test-event-1.json
tests/transcribe/: mispronunciation_test.py  test-event-1.json  test-event-2.json  test-event-3.json  test-event-4.json
util/s3/: CORS.json
(+50 files in other folders)
