[metadata]
name = label_pipeline
description = A labeling pipeline
author =
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    transcribe
install_requires =
    boto3==1.18.37
    botocore==1.21.37
    ffmpeg-python==0.2.0
    pysrt==1.1.2
    requests==2.31.0
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

; [options.package_data]
; label_pipeline = py.typed

[flake8]
max-line-length = 160